@@ -84,6 +84,7 @@ rubia-long-stack-inserter=Long-handed stack inserter
 craptonite-wall=Craptonite wall
 
 medium-trashsteroid=Medium trashsteroid
+medium-trashsteroid-explosion=Medium trashsteroid explosion __1__
 trashsteroid-chunk=Trashsteroid chunk
 
 rubia-asteroid-spawner=Rubia asteroid spawner
